# ToDo-List

./: .gitignore  pyproject.toml  pytest_debug.txt
docs/: UserStories.md
src/todolist/: __init__.py  createlist.py
tests/: test_todo.py
